[package]
name = "rjq"
version = "0.1.1"
authors = ["Anton Smolin"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/embali/rjq/"
homepage = "https://github.com/embali/rjq/"
description = """Redis Job Queue"""

[dependencies]
redis = "0.8.0"
rustc-serialize = "0.3.22"
uuid = { version = "0.2", features = ["serde", "v4"] }
