[package]
name = "rjq"
version = "0.2.0"
authors = ["Anton Smolin"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/embali/rjq/"
homepage = "https://github.com/embali/rjq/"
documentation = "https://docs.rs/rjq/"
keywords = ["queue", "fifo", "job", "redis", "worker"]
categories = ["algorithms", "concurrency", "development-tools"]
description = """Redis job queue"""

[badges]
travis-ci = { repository = "embali/rjq" }

[dependencies]
redis = "0.8.0"
rustc-serialize = "0.3.22"
uuid = { version = "0.4.0", features = ["v4"] }
